# ngfw-prototype

./: .gitignore  LICENSE  Phase-3.md  README.md  VM1_Firewall_API_Implementation_Guide.md  pyproject.toml  requirements.txt
NGFW-ML/models/: feature_columns.json  model_catboost.pkl  model_lr.pkl  model_xgb.pkl  scaler.pkl
ngfw-control/: app.py  config.py  database.py  firewall_service.py  logger.py  ngfw.db  requirements.txt  suri_clam_processor.py
ngfw-control/docs/: API_DOCUMENTATION.md  MALWARE_ALERT_INTEGRATION_PLAN.md  NGFW_PROJECT_OVERVIEW.md  README.md  SYSTEM_DOCUMENTATION.md  alert_processor_implementation_and_testing.md  api_documentation.md  nftables_configuration.md  suricata_configuration.md
ngfw-dashboard/: package.json  tsconfig.app.json  vite.config.ts
ngfw-dashboard/ngfw-dashboard/: index.html  package-lock.json  tsconfig.node.json
ngfw-ml/: cicflowmeter_bridge.py
ngfw-ml/models/: model_dt.pkl
ngfw-tests/: DEMO_GUIDE.md  config.py  run_all.py  test_behavioral.py  test_cmdi.py  test_dashboard.py  test_firewall.py  test_lfi.py  test_malware.py  test_ml_api.py  test_open_redirect.py  test_sqli.py  test_udp_flood.py  test_xss.py  test_xxe.py  utils.py
ngfw_ml_temp/: ensemble_config.json  inference_service.py
web/: .gitignore  README.md  app.py  config.py  models.py  requirements.txt  wsgi.py
web/docs/: ARCHITECTURE_DECISIONS.md  Bug_Fixes_Summary.md  CHANGES_SUMMARY.md  DATABASE_SCHEMA_DESIGN.md  FILE_SCANNING_TEST_GUIDE.md  Finished_Implementation.md  Finished_Implementation_2.md  IMPLEMENTATION_PLAN.md  Military_Defense_Website_Plan.md  (+13 more)
(+78 files in other folders)
