[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ngfw-prototype"
version = "0.1.0"
description = "NGFW Prototype - Test website for next-generation firewall detection modules"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ngfw-prototype contributors"},
]
dependencies = [
    "flask>=3.0,<4.0",
    "gunicorn>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["web*"]
